--- a/StartHelper/MainWindow.xaml
+++ b/StartHelper/MainWindow.xaml
@@ -24,30 +24,30 @@
         <Label Grid.Row="0" Grid.Column="2" VerticalAlignment="Bottom" Content="Start" Foreground="AntiqueWhite" HorizontalAlignment="Center" FontSize="15"/>
 
 
-        <Button Grid.Row="1" Content="/" FontSize="20" Click="Button_Click" Margin="10" Background="#FFDDDDDD"/>
+        <Button Grid.Row="1" Content="/" FontSize="20" Click="StartHotkey" Margin="10" Background="#FFDDDDDD"/>
 
 
-        <Button Grid.Row="2" Grid.Column="2" FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="2" Grid.Column="2" FontSize="20" Click="StartVisual" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/vis.png" Stretch="Uniform"/>
         </Button>
         
-        <Button Grid.Row="1" Grid.Column="3" FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="1" Grid.Column="3" FontSize="20" Click="PlayMusic" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/spotPng.png" Stretch="Uniform"/>
         </Button>
 
-        <Button Grid.Row="1" Grid.Column="1" FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="1" Grid.Column="1" FontSize="20" Click="KillOver" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/overPng.png" Stretch="Uniform"/>
         </Button>
 
-        <Button Grid.Row="2" Grid.Column="1"  FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="2" Grid.Column="1"  FontSize="20" Click="KillRiot" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/riotPng.png" Stretch="Uniform"/>
         </Button>
 
-        <Button Grid.Row="3" Grid.Column="2" FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="3" Grid.Column="2" FontSize="20" Click="StartOver" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/overPng.png" Stretch="Uniform"/>
         </Button>
 
-        <Button Grid.Row="1" Grid.Column="2" FontSize="20" Click="Button_Click" Margin="10" Background="Transparent">
+        <Button Grid.Row="1" Grid.Column="2" FontSize="20" Click="OpenGithub" Margin="10" Background="Transparent">
             <Image Source="pack://application:,,,/StartHelper;component/Images/github.png" Stretch="Uniform"/>
         </Button>
 
